# hexagon_app

./: .gitignore  Cargo.toml  README.md  Resource.md  database.db
src/: main.rs
src/api/: create_pokemon.rs  delete_pokemon.rs  health.rs  mod.rs
src/domain/: create_pokemon.rs  delete_pokemon.rs  entities.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  mod.rs
src/gui/: create_pokemon.rs  fetch_all_pokemons.rs  mod.rs
src/repositories/: pokemon.rs
