[package]
name = "hexagon_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.2.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
clap = "2.33.3"
dialoguer = "0.9.0"
ureq = { version = "*", features = ["json", "charset"] }

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]